hashgenerator/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: hashgenerator-svc
spec:
  type: ClusterIP
  selector:
    app: hashgenerator
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
